<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSalmon"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_gst"
            android:background="@color/colorGray"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_30sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:text="@string/enter_product_name"
                android:textSize="@dimen/_20sdp" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:text="@string/enter_product_price"
                android:textSize="@dimen/_20sdp" />

            <EditText
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_20sdp"
                android:layout_weight="1"
                android:text="@string/select_gst_slab"/>
            <Spinner
                android:layout_weight="1"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:text="@string/gst_amount"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/gstAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_30sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:text="@string/final_amount"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/gstFinalAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_30sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <Button
                android:background="@color/colorGray"
                android:textColor="@color/colorAccent"
                android:id="@+id/GstResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/get" />
        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>