<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".SimpleInterest">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="@dimen/_4sdp"
        android:background="@color/colorSalmon"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_emi"
            android:textAlignment="center"
            android:background="@color/colorGray"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_30sdp"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:textSize="@dimen/_20sdp"
                android:text="@string/enter_amount"
                android:layout_weight="1"/>
            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:id="@+id/EmiAmount"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:textSize="@dimen/_20sdp"
                android:text="@string/enter_interest_rate"
                android:layout_weight="1"/>
            <EditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:id="@+id/Emirate"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:textSize="@dimen/_20sdp"
                android:text="@string/enter_years"
                android:layout_weight="1"/>
            <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:id="@+id/EmiYears"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:textSize="@dimen/_20sdp"
                android:text="@string/per_month_emi"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:textSize="@dimen/_20sdp"
                android:layout_weight="1"
                android:id="@+id/EmiFinalAmount"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:background="@color/colorGray"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get"
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/getPerMonthEmi"/>
        </LinearLayout>
    </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>