<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".CompoundInterest">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/_4sdp"
            android:background="@color/colorSalmon"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@color/colorGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_compound_interest"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_30sdp"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/enter_amount"
                    android:layout_weight="1"/>
                <EditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:id="@+id/cAmount"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/enter_interest_rate"
                    android:layout_weight="1"/>
                <EditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:id="@+id/cRate"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/enter_years"
                    android:layout_weight="1"/>
                <EditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:id="@+id/cYears"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/compound_interest"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_20sdp"
                    android:id="@+id/cInterest"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/final_amount"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:textSize="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:id="@+id/cFinalAmount"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:background="@color/colorGray"
                    android:layout_height="wrap_content"
                    android:text="@string/get"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:id="@+id/cResult"/>
            </LinearLayout>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>


    </LinearLayout>
