<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".SimpleInterest">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/_4sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSalmon"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/calculate_simple_interest"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_30sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:text="@string/enter_amount"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/eAmount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:text="@string/enter_interest_rate"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:text="@string/enter_months"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:text="@string/interest"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_30sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:text="@string/final_amount"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/finalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_30sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/colorGray"
                    android:text="@string/get"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>